--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -137,7 +137,7 @@ jobs:
           ssh rocky@192.168.1.67 "
             cd /opt/example-voting-app
             git pull origin main
-            docker stack deploy -c /home/rocky/docker-compose.yml votingapp"
+            docker stack deploy -c docker-stack.yml votingapp"
 
   # ====================
   # 7. Supervision Monitoring (VM1)
