--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -137,7 +137,7 @@ jobs:
           ssh rocky@192.168.1.67 "
             cd /opt/example-voting-app
             git pull origin main
-            docker compose up -d docker-compose.yml votingapp"
+            docker compose up -d"
 
   # ====================
   # 7. Supervision Monitoring (VM1)
